--- a/package.json
+++ b/package.json
@@ -1,40 +1,44 @@
 {
-  "name": "ecommerce-admin",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@clerk/nextjs": "^4.29.9",
-    "@hookform/resolvers": "^3.3.4",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-slot": "^1.0.2",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "lucide-react": "^0.356.0",
-    "next": "14.1.3",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.51.0",
-    "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4",
-    "zustand": "^4.5.2"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.3",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
-  }
+	"name": "ecommerce-admin",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"prisma-gen": "npx prisma generate",
+		"prisma-push": "npx prisma db push"
+	},
+	"dependencies": {
+		"@clerk/nextjs": "^4.29.9",
+		"@hookform/resolvers": "^3.3.4",
+		"@prisma/client": "^5.11.0",
+		"@radix-ui/react-dialog": "^1.0.5",
+		"@radix-ui/react-label": "^2.0.2",
+		"@radix-ui/react-slot": "^1.0.2",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.0",
+		"lucide-react": "^0.356.0",
+		"next": "14.1.3",
+		"react": "^18",
+		"react-dom": "^18",
+		"react-hook-form": "^7.51.0",
+		"tailwind-merge": "^2.2.1",
+		"tailwindcss-animate": "^1.0.7",
+		"zod": "^3.22.4",
+		"zustand": "^4.5.2"
+	},
+	"devDependencies": {
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"autoprefixer": "^10.0.1",
+		"eslint": "^8",
+		"eslint-config-next": "14.1.3",
+		"postcss": "^8",
+		"prisma": "^5.11.0",
+		"tailwindcss": "^3.3.0",
+		"typescript": "^5"
+	}
 }
