--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"axios": "^1.6.7",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.0",
+		"cmdk": "^1.0.0",
 		"lucide-react": "^0.356.0",
 		"next": "14.1.3",
 		"react": "^18",
