--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"cmdk": "^0.2.1",
 		"lucide-react": "^0.356.0",
 		"next": "14.1.3",
+		"next-cloudinary": "^6.3.0",
 		"react": "^18",
 		"react-dom": "^18",
 		"react-hook-form": "^7.51.0",
