--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"lucide-react": "^0.356.0",
 		"next": "14.1.3",
 		"next-cloudinary": "^6.3.0",
+		"next-themes": "^0.3.0",
 		"react": "^18",
 		"react-dom": "^18",
 		"react-hook-form": "^7.51.0",
