--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"react-dom": "^18",
 		"react-hook-form": "^7.51.0",
 		"react-hot-toast": "^2.4.1",
+		"react-spinners": "^0.13.8",
 		"recharts": "^2.12.3",
 		"stripe": "^14.21.0",
 		"tailwind-merge": "^2.2.1",
