--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"start": "next start",
 		"lint": "next lint",
 		"prisma-gen": "npx prisma generate",
-		"prisma-push": "npx prisma db push"
+		"prisma-push": "npx prisma db push",
+		"postinstall": "prisma generate"
 	},
 	"dependencies": {
 		"@clerk/nextjs": "^4.29.9",
