--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,16 +47,20 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+        uses: docker/setup-buildx-action@v1
       - name: Login to Private Repo
-        uses: docker/login-action@v3
+        uses: docker/login-action@v1
         with:
           registry: ${{ env.REGISTRY_URL }}
           username: ${{ secrets.REGISTRY_USERNAME }}
           password: ${{ secrets.REGISTRY_PASSWORD }}
       - name: Build and push
-        uses: docker/build-push-action@v5
+        uses: docker/build-push-action@v2
         with:
           context: .
+          file: ./Dockerfile
           push: true
-          tags: ecommerce-admin:latest
+          builder: ${{ steps.buildx.outputs.name }}
+          tags: ${{ env.REGISTRY_URL }}/ecommerce-admin:latest
+          cache-from: 'type=registry,ref=${{ env.REGISTRY_URL }}/ecommerce-admin:buildcache'
+          cache-to: 'type=registry,ref=${{ env.REGISTRY_URL }}/ecommerce-admin:buildcache,mode=max'
