--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
     branches: ['main']
 
 jobs:
-  cache-and-install:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -41,26 +41,25 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
-  build-docker-image:
+  docker:
     runs-on: self-hosted
+    # needs: build
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v3
       - name: Login to Private Repo
-        uses: docker/login-action@v1
+        uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY_URL }}
           username: ${{ secrets.REGISTRY_USERNAME }}
           password: ${{ secrets.REGISTRY_PASSWORD }}
       - name: Build and push
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v5
         with:
           context: .
-          file: ./Dockerfile
           push: true
-          builder: ${{ steps.buildx.outputs.name }}
-          tags: ${{ env.REGISTRY_URL }}/ecommerce-admin:latest
-          cache-from: 'type=registry,ref=${{ env.REGISTRY_URL }}/ecommerce-admin:buildcache'
-          cache-to: 'type=registry,ref=${{ env.REGISTRY_URL }}/ecommerce-admin:buildcache,mode=max'
+          tags: ${{ env.REGISTRY_URL }}/rameskum/ecommerce-admin:latest
